--- a/composer.json
+++ b/composer.json
@@ -3,6 +3,8 @@
         "vlucas/phpdotenv": "^5.6",
         "phpmailer/phpmailer": "^7.0",
         "picqer/php-barcode-generator": "^3.2",
-        "intervention/image": "^3.11"
+        "intervention/image": "^3.11",
+        "tecnickcom/tcpdf": "^6.10",
+        "dompdf/dompdf": "^3.1"
     }
 }
